@@ -2392,6 +2392,12 @@
         				INCREASED FACTORY PRODUCTION- factories produce 2 additional units, repairs 1/2 price<br>
         				WAR BONDS- collect an 1d6 extra IPCs each turn<br>
         				MECHANIZED INFANTRY- tanks may carry 1 infantry each for 2 spaces<br>
+        				<br>
+        				<br>
+        				<b>Victory Conditions</b><br>
+        				Total Victory - 18 Victory Cities<br>
+        				Honorable Surrender - 15 Victory Cities<br>
+        				Projection of Power - 13 Victory Cities<br>
 					]]>	
 					</value>
 				</property>
