@@ -1,4 +1,6 @@
 Changes for 1.0.4
+* Add victory conditions to game notes
+
 * Add Relief Tiles for AA50 (Much thanks to Imperious Leader)
 
 * Fix bug 281534 fighter movement calculation (ComradeKev)
